--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,7 +1,9 @@
 .search-wrapper {
-  width: 500px;
+  margin: 0 auto;
 }
 
 #pokemon-name-search {
-  width: 100%;
+  width: 600px;
+  margin-top: 2rem;
+  padding: 1.5rem;
 }
